stlying js and html

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
       <p id="currentDay" class="lead"></p>
     </header>
     <div timeBlock class="timeBlockContainer">
+      <!-- Timeblocks go here -->
       <ul class="hoursList">
         <li>9AM</li>
         <li>10AM</li>
@@ -55,7 +56,7 @@
         <li>5PM</li>
       </ul>
       <ol class="timeBlockList">
-        <li class="blockListItem">number 1</li>
+        <input type="text" class="blockListItem" />
         <li class="blockListItem">number 2</li>
         <li class="blockListItem">number 3</li>
         <li class="blockListItem">number 4</li>
@@ -65,7 +66,6 @@
         <li class="blockListItem">number 2</li>
         <li class="blockListItem">number 2</li>
       </ol>
-      <!-- Timeblocks go here -->
     </div>
 
     <script src="./script.js"></script>
