functioned and added save button

--- a/index.html
+++ b/index.html
@@ -57,15 +57,26 @@
       </ul>
       <ol class="timeBlockList">
         <input type="text" class="blockListItem" />
-        <li class="blockListItem">number 2</li>
-        <li class="blockListItem">number 3</li>
-        <li class="blockListItem">number 4</li>
-        <li class="blockListItem">number 5</li>
-        <li class="blockListItem">number 2</li>
-        <li class="blockListItem">number 2</li>
-        <li class="blockListItem">number 2</li>
-        <li class="blockListItem">number 2</li>
+        <input type="text" class="blockListItem" />
+        <input type="text" class="blockListItem" />
+        <input type="text" class="blockListItem" />
+        <input type="text" class="blockListItem" />
+        <input type="text" class="blockListItem" />
+        <input type="text" class="blockListItem" />
+        <input type="text" class="blockListItem" />
+        <input type="text" class="blockListItem" />
       </ol>
+      <form class="saveButtonList">
+        <button class="saveBtn">Save</button>
+        <button class="saveBtn">Save</button>
+        <button class="saveBtn">Save</button>
+        <button class="saveBtn">Save</button>
+        <button class="saveBtn">Save</button>
+        <button class="saveBtn">Save</button>
+        <button class="saveBtn">Save</button>
+        <button class="saveBtn">Save</button>
+        <button class="saveBtn">Save</button>
+      </form>
     </div>
 
     <script src="./script.js"></script>
